Graph editor tooltips give false impression of the toggle state #75519

Closed
opened 2020-04-08 10:23:05 +02:00 by Wouter Stomp · 6 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: blender/blender@505a19ed75
Worked: (newest version of Blender that worked as expected)

Short description of error
Two of the tooltips for the toggles in the graph editor channels give a false impression of the toggle having a certain state:
F-curve modifiers are disabled
F-curve is visible in graph editor for editing

Other tooltips use more 'neutral' language, e.g.: Editability of keyframes for this channel

Suggestions for improvement:
Apply modifier to F-curve (still a bit ambiguous, maybe someone can think of better wording)
F-curve visibility in graph editor

Exact steps for others to reproduce the error
Add some keyframes for animation
Open graph editor
Hoover over the small channel icons enabling/disabling per-channel features.

**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-04 16:55, hash: `blender/blender@505a19ed75` Worked: (newest version of Blender that worked as expected) **Short description of error** Two of the tooltips for the toggles in the graph editor channels give a false impression of the toggle having a certain state: F-curve modifiers are disabled F-curve is visible in graph editor for editing Other tooltips use more 'neutral' language, e.g.: Editability of keyframes for this channel Suggestions for improvement: Apply modifier to F-curve (still a bit ambiguous, maybe someone can think of better wording) F-curve visibility in graph editor **Exact steps for others to reproduce the error** Add some keyframes for animation Open graph editor Hoover over the small channel icons enabling/disabling per-channel features.
Author

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket
Philipp Oeser self-assigned this 2020-04-08 18:22:53 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @valfeur

Added subscriber: @valfeur

I have made a diff for this task:[D7387 ](https://developer.blender.org/D7387);
I hope it can be helpful

I have made a diff for this task:[[D7387](https://archive.blender.org/developer/D7387) ](https://developer.blender.org/D7387); I hope it can be helpful

This issue was referenced by blender/blender@af876b12f1

This issue was referenced by blender/blender@af876b12f1f7925228a568d7ae1f412babf08114
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#75519
No description provided.